# parklogic

./: .gitignore  CMakeLists.txt  PRESENTATION_ROLES.md
assets/: asset_data.txt  attachement_points.txt
include/: config.hpp
include/core/: Application.hpp  AssetManager.hpp  EntityManager.hpp  GameLoop.hpp  Logger.hpp
include/entities/: Car.hpp
include/entities/map/: Module.hpp  Modules.hpp  Waypoint.hpp  World.hpp  WorldGenerator.hpp
include/events/: GameEvents.hpp  TrackingEvents.hpp
include/input/: InputSystem.hpp
include/scenes/: GameScene.hpp  MapConfigScene.hpp  SceneManager.hpp
include/systems/: CameraSystem.hpp  PathPlanner.hpp  TrackingSystem.hpp  TrafficSystem.hpp
include/ui/: DashboardOverlay.hpp  DebugOverlay.hpp  GameHUD.hpp  UIButton.hpp
src/: main.cpp
src/core/: Application.cpp  AssetManager.cpp  EntityManager.cpp  EventLogger.cpp  GameLoop.cpp  Window.cpp
src/entities/: Car.cpp
src/entities/map/: Modules.cpp  World.cpp  WorldGenerator.cpp
src/input/: InputSystem.cpp
src/scenes/: GameScene.cpp  MainMenuScene.cpp  MapConfigScene.cpp  SceneManager.cpp
src/systems/: CameraSystem.cpp  PathPlanner.cpp  TrackingSystem.cpp  TrafficSystem.cpp
src/ui/: DashboardOverlay.cpp  DebugOverlay.cpp  GameHUD.cpp  UIButton.cpp
tests/: CMakeLists.txt  EventBusTests.cpp  GameLoopTests.cpp  GameSceneTests.cpp  SceneManagerTests.cpp  WindowTests.cpp  test_main.cpp
